--- a/render.yaml
+++ b/render.yaml
@@ -4,22 +4,16 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm run start:production
+    startCommand: npx n8n
+
     envVars:
       - key: WEBHOOK_URL
         value: https://n8n.onrender.com
-      - key: N8N_ENCRYPTION_KEY
-        generateValue: true
       - key: N8N_BASIC_AUTH_ACTIVE
         value: true
       - key: N8N_BASIC_AUTH_USER
         value: admin
       - key: N8N_BASIC_AUTH_PASSWORD
         generateValue: true
-  
-
-databases:
-  - name: n8n-db
-    databaseName: n8ndb
-    user: n8nuser
-
+      - key: GENERIC_TIMEZONE
+        value: Asia/Manila
